--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -10,6 +10,18 @@
 
   <body>
     <div class="flex-container">
+      <div class="welcome-text">
+        <h1 class="welcome-header">
+          Välkommen!
+        </h1>
+        <p>
+          Denna portal är till för anställda i Casator Care. <br>Letar du efter
+          Casator Cares hemsida så hittar du den på <a class="header-link" href="https://casatorcare.se"><u><em>casatorcare.se</em></u></a>. Där finns
+          information om våra verksamheter, samt information om hur du kommer i
+          kontakt med oss. <br>Är du anställd i Casator så loggar du in här
+          nedanför. Användarnamn och lösenord får du av din verksamhetschef.
+        </p>
+      </div>
       <div class="login-wrapper">
         <div class="logo-container"></div>
         <form
