--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,16 +8,28 @@ body {
     height: 100%;
     background: url("/static/images/backgroundCastle.jpg");
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-position-x: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
+  .welcome-header{
+    display: none;
+    justify-content: center;
+  }
+  .welcome-text{
+    display: none;
+    width: 35%;
+    font-size: 1.1rem;
+    font-family: sans-serif;
+  }
+  
   .login-wrapper {
-    width: 620px;
-    height: 620px;
+    width: 100%;
+    height: 60%;
     background: rgba(255, 255, 255, 0.5);
-    margin: 0 auto;
-    margin-top: 150px;
   }
   .logo-container {
     background: url("/static/images/logo.png");
@@ -59,7 +71,7 @@ body {
     width: 105px;
     height: 45px;
     background: white;
-    border: 2px solid black;
+    border: 1px solid rgb(255, 255, 255);
     font-size: 18px;
     font-family: sans-serif;
     margin-left: 30%;
@@ -84,16 +96,28 @@ body {
     height: 100%;
     background: url("/static/images/backgroundCastle.jpg");
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-position-x: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
+  .welcome-header{
+    display: none;
+    justify-content: center;
+  }
+  .welcome-text{
+    display: none;
+    width: 35%;
+    font-size: 1.1rem;
+    font-family: sans-serif;
+  }
+  
   .login-wrapper {
     width: 620px;
     height: 620px;
     background: rgba(255, 255, 255, 0.5);
-    margin: 0 auto;
-    margin-top: 150px;
   }
   .logo-container {
     background: url("/static/images/logo.png");
@@ -135,11 +159,12 @@ body {
     width: 105px;
     height: 45px;
     background: white;
-    border: 2px solid black;
+    border: 1px solid white;
     font-size: 18px;
     font-family: sans-serif;
     margin-left: 30%;
 }
+
   .username-line {
     border-top: 2px solid white;
     width: 255px;
@@ -160,16 +185,36 @@ body {
     height: 100%;
     background: url("/static/images/backgroundCastle.jpg");
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-position-x: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .welcome-header{
+    display: flex;
+    justify-content: center;
+  }
+  .welcome-text{
+    display: block;
+    width: 35%;
+    font-size: 1.1rem;
+    font-family: sans-serif;
+  }
+  .header-link{
+    color: #212529;
+  }
+  .header-link:hover{
+    color:#bd2716;
+    transition: 0.5s;
+  }
+
   .login-wrapper {
-    width: 620px;
+    width: 660px;
     height: 620px;
     background: rgba(255, 255, 255, 0.5);
-    margin: 0 auto;
-    margin-top: 150px;
   }
   
   .logo-container {
@@ -213,10 +258,15 @@ body {
     width: 105px;
     height: 45px;
     background: white;
-    border: 2px solid black;
+    border: 1px solid transparent;
     font-size: 18px;
     font-family: sans-serif;
     margin-left: 30%;
+}
+.login-button:hover {
+  background-color: #bd2716;
+  transition: 0.5s;
+  color: white;
 }
   .username-line {
     border-top: 2px solid white;
