--- a/static/css/header.css
+++ b/static/css/header.css
@@ -51,7 +51,7 @@
 
 @media (min-width: 834px){
   .flex-navbar {
-    width: 95%;
+    width: 100%;
     height: 10%;
     background: #ffffff;
     box-shadow: 0px 4px 50px rgb(0 0 0 / 5%);
@@ -60,7 +60,8 @@
     justify-content: space-between;
   }
   .header-container {
-    width: 39%;
+    width: 45%;
+    padding-right: 5.5rem;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -78,7 +79,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 23%;
+    margin-right: 1rem;
+    width: 20%;
     background-color: #f7f7f7;
   }
   .btn{
@@ -99,7 +101,7 @@
 
 @media (min-width: 1440px) {
   .flex-navbar {
-    width: 96%;
+    width: 100%;
     height: 10%;
     background: #ffffff;
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.05);
@@ -109,6 +111,7 @@
   }
   .header-container {
     width: 20%;
+    padding-right: 0;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -127,6 +130,7 @@
     align-items: center;
     height: 100%;
     width: 10%;
+    margin-right: 5.3rem;
     background-color:#f7f7f7 ;
   }
   .btn{
